# ImCalc

./: CMakeLists.txt  Readme.md  main.cpp
include/: Application.h  Auxiliary.h  CalcEngine.h  CalcUI.h
scripts/: CustomFunc1.lua  CustomFunc2.lua  CustomFunc3.lua  CustomFunc4.lua
src/: Application.cpp  Auxiliary.cpp  CalcEngine.cpp  CalcUI.cpp  main.cpp
